--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-From: <Saved by Blink>
-Snapshot-Content-Location: https://blooketcom.burgerbar.cl/
-Subject: blooketcom.burgerbar.cl
-Date: Mon, 18 Nov 2024 08:58:07 -0500
-MIME-Version: 1.0
-Content-Type: multipart/related;
-	type="text/html";
-	boundary="----MultipartBoundary--cHPmej6J0716FE6gA8k5A4kX6v8XAlEe8DU2yZEOpf----"
-
+<DOCTYPE! html>
 
 ------MultipartBoundary--cHPmej6J0716FE6gA8k5A4kX6v8XAlEe8DU2yZEOpf----
 Content-Type: text/html
